# datakitpy

./: .flake8  README.md  flake.nix  pyproject.toml  requirements.txt
opendatafit/: __init__.py  datapackage.py  helpers.py  resources.py
src/opendatafit/: datapackage.py  helpers.py  resources.py
src/opendatapy/: datapackage.py  resources.py
