[project]
name = "opendatafit"
version = "0.0.0"
description = "opendata.fit datapackage helper library"
requires-python = ">=3.11"
authors = [
    { name = "echus", email = "varvara@echus.co" },
]
dependencies = [
    "pandas >= 2.2, < 3.0",
]

[project.urls]
"Homepage" = "https://github.com/opendatafit/opendatafit"
"Bug Tracker" = "https://github.com/opendatafit/opendatafit/issues"

[project.optional-dependencies]
development = [
    "pre-commit",
    "build",
]
all = ["opendatafit[development]"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["py.typed"]

[tool.black]
line-length = 79
include = '\.pyi?$'
force-exclude = '''
/(
    \.git
)/
'''
